--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Sapphire Drop",
-  "url": "https://svettuff.github.io/SapphireDrop/",
-  "iconUrl": "https://svettuff.github.io/SapphireDrop/icon.png",
-  "termsUrl": "https://svettuff.github.io/SapphireDrop/terms",
-  "privacyUrl": "https://svettuff.github.io/SapphireDrop/privacy",
+  "url": "https://svettuff.github.io/SapphireDropTON/",
+  "iconUrl": "https://svettuff.github.io/SapphireDropTON/icon.png",
+  "termsUrl": "https://svettuff.github.io/SapphireDropTON/terms",
+  "privacyUrl": "https://svettuff.github.io/SapphireDropTON/privacy",
   "network": "mainnet"
 }
