--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tonconnect/ui-react": "^2.1.0",
     "buffer": "^6.0.3",
     "gh-pages": "^6.3.0",
+    "ldrs": "^1.1.7",
     "process": "^0.11.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
